# parse-sap-odata

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.config/: nextest.toml
build_test_app/: Cargo.toml  README.md
build_test_app/html/: index.html
build_test_app/odata/: gwsample_basic.xml
build_test_app/src/: main.rs  unit_tests.rs
build_test_app/src/err_handlers/: mod.rs
build_test_app/src/feed/: author.rs  link.rs  mod.rs
build_test_app/src/feed/entry/: category.rs  mod.rs
build_test_app/src/feed/entry/content/: mod.rs
build_test_app/src/xml/: mod.rs
build_test_app/test_data/: BusinessPartnerSet-no-etags.xml  BusinessPartnerSet.xml  ContactSet.xml  ProductSet.xml  SalesOrderLineItemSet.xml  SalesOrderSet.xml  VH_AddressTypeSet.xml  VH_BPRoleSet.xml  VH_CategorySet.xml  VH_CountrySet.xml  VH_CurrencySet.xml  VH_LanguageSet.xml  VH_ProductTypeCodeSet.xml  VH_SexSet.xml  VH_UnitLengthSet.xml  VH_UnitQuantitySet.xml  VH_UnitWeightSet.xml
build_test_crate/: Cargo.toml  build.rs
build_test_crate/.cargo/: config.toml
build_test_crate/odata/: gwsample_basic.xml
build_test_crate/src/: main.rs
build_test_crate/src/auth/: mod.rs
build_test_crate/src/err_handlers/: mod.rs
docs/: complex_types.md  entitysets_enum.md  limitations.md  metadata.md  usage.md
src/: lib.rs  macros.rs  unit_tests.rs  xml.rs
src/atom/: atom_link.rs  mod.rs  unit_tests.rs
src/edmx/: mod.rs
src/edmx/data_services/: mod.rs
src/edmx/data_services/schema/: atom_link.rs  complex_type.rs  metadata.rs  mod.rs
src/edmx/reference/: include.rs  mod.rs  unit_tests.rs
src/ms_annotations/: mod.rs
src/oasis/: annotation.rs  annotations.rs  collection.rs  mod.rs  property_value.rs  record.rs
src/parser/: error.rs  generate_complex_types.rs  generate_metadata.rs  generate_metadata_complex_types.rs  generate_srv_doc.rs  io.rs  mod.rs  syntax_fragments.rs
src/parser/generate/: mod.rs
src/parser/generate/metadata_doc/: associations.rs  complex_types.rs  entity_types.rs  mod.rs
src/parser/generate_metadata/: associations.rs  complex_types.rs  entity_types.rs  mod.rs
src/parser/generate_srv/: complex_types.rs  entity_types.rs  mod.rs
src/parser/syntax_fragments/: derive_traits.rs  fragment_generators.rs  mod.rs  serde_fragments.rs
src/property/: metadata.rs  mod.rs  property_ref.rs  property_type.rs  unit_tests.rs
src/property/property_ref/: metadata.rs  mod.rs
src/sap_annotations/: association_set.rs  association_set_sap_annotations.rs  entity_container.rs  entity_container_sap_annotations.rs  entity_set.rs  entity_set_sap_annotations.rs  entity_type.rs  entity_type_sap_annotations.rs  function_import.rs  function_import_parameter_sap_annotations.rs  function_import_sap_annotations.rs  mod.rs  navigation_property.rs  navigation_property_sap_annotations.rs  property.rs  property_sap_annotations.rs  schema.rs  schema_sap_annotations.rs
src/sap_annotations/aggregation_role/: metadata.rs  mod.rs
src/sap_annotations/association_set/: metadata.rs  mod.rs
src/sap_annotations/display_format/: metadata.rs  mod.rs
src/sap_annotations/field_control/: metadata.rs  mod.rs
src/sap_annotations/filter_restriction/: metadata.rs  mod.rs
src/sap_annotations/function_import/: mod.rs  parameter.rs
src/sap_annotations/parameter/: metadata.rs  mod.rs
src/sap_annotations/property/: metadata.rs  mod.rs
src/sap_semantics/: entity_set.rs  entity_type.rs  mod.rs  property.rs
src/sap_semantics/property/: metadata.rs  mod.rs
src/schema/: association.rs  complex_type.rs  entity_container.rs  entity_set.rs  entity_type.rs  mod.rs
src/schema/association/: mod.rs
src/schema/entity_container/: association_set.rs  mod.rs
src/schema/entity_type/: mod.rs
src/test_utils/: mod.rs
src/utils/: mod.rs  parse_error.rs  parse_odata.rs  rust_tools.rs  unit_tests.rs
src/xml/: mod.rs
test_data/: association.xml  association_set.xml  atom_link.xml  complex_type_metadata.xml  complex_type_pallet.xml  edmx_reference.xml  end.xml  entity_container.xml  entity_type_business_partner.xml  entity_type_product.xml  referential_constraint.xml
test_data/test_tree/subdir/: another_file.txt
tests/: catalog_collection_es5_services.xml  catalogservice.xml  catalogservice_v0002.xml  epm_ref_apps_po_apv_srv.xml  epm_ref_apps_shop_srv.xml  error_log_srv.xml  folketinget.xml  gwdemo.xml  interop.xml  no_complex_types.xml  page_builder_conf.xml  page_builder_cust.xml  page_builder_pers.xml  parsed_output.txt  rmtsampleFlight.xml  sepmra_gr_post orig.xml  sepmra_gr_post.xml  sepmra_ovw.xml  sepmra_po_apv.xml  sepmra_po_man.xml  sepmra_prod_man.xml  sepmra_shop.xml  sepmra_so_man.xml  sgbt_nte_cds_api_d_srv.xml  sgbt_nte_cds_api_srv.xml  transport.xml  two_entity_types.xml  z_test_cds_with_param_srv.xml  zagencycds_srv.xml  zdevelopercenter.xml  ze2e100_sol_2_srv.xml  zepm_ref_apps_po_apv_srv.xml  zpdcds_srv.xml  zrfc1_srv.xml  zsocds_srv.xml
(+43 files in other folders)
