[package]
name = "parse-sap-odata"
version = "1.4.7"
authors = ["Chris Whealy <chris@whealy.com>"]
edition = "2021"
description = "Generate a pair of Rust modules from SAP V2 OData metadata"
keywords = ["odata", "sap", "parser", "opendata"]
categories = ["development-tools::build-utils", "parser-implementations"]
repository = "https://github.com/ChrisWhealy/parse-sap-odata"
license = "MIT"

[features]
parser = []

[dev-dependencies]
chrono = "0.4"
rust_decimal = { version ="1", features = ["serde-with-str"]}
parse-sap-atom-feed = "1.2"
#parse-sap-atom-feed = { path = "../parse-sap-atom-feed" }

[dependencies]
anyhow = "1.0"
check_keyword = "0.3"
convert_case = "0.6"

parse-sap-atom-feed = "1.2"
#parse-sap-atom-feed = { path = "../parse-sap-atom-feed" }

quick-xml = { version = "0.36", features = ["serialize"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
which = "6.0"
