[package]
name = "build-test-app"
version = "1.3.1"
edition = "2021"

[build-dependencies]
parse-sap-odata = { path = "../" }

[dependencies]
actix-web = "4.3"
actix-rt = "2.8"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"]}
env_logger = "0.10"
log = "0.4"
# Versions of quick-xml from 0.27.0 upwards break with error Custom("missing field `Name`")
quick-xml = { version = "0.26", features = ["serialize"] }
regex = "1.9"
reqwest = { version = "0.11", features = ["json"]}
parse-sap-atom-feed = { path = "../../parse-sap-atom-feed" }
rust_decimal = "1.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tinytemplate = "1.2"
uuid = { version = "1.4", features = ["serde"]}
url = "2.4"
