[package]
name = "build-test-crate"
version = "1.1.0"
edition = "2021"

[build-dependencies]
parse-sap-odata = { path = "../" }

[dependencies]
actix-web = "4.3.1"
actix-rt = "^2.8.0"
base64 = "0.21"
chrono = "0.4.26"
reqwest = { version = "^0.11", features = ["json"]}
rust_decimal = "1.30.0"
uuid = "1.4.1"
